[gd_scene load_steps=7 format=3 uid="uid://ck10bdolk6vtn"]

[ext_resource type="Script" path="res://scenes/world.gd" id="1_iegsp"]
[ext_resource type="PackedScene" uid="uid://geitjjorng41" path="res://scenes/skull.tscn" id="2_w00os"]
[ext_resource type="PackedScene" uid="uid://cktfurh6l63nr" path="res://scenes/lighter.tscn" id="3_2cbla"]

[sub_resource type="BoxShape3D" id="BoxShape3D_s7n6b"]
size = Vector3(30, 1, 30)

[sub_resource type="BoxMesh" id="BoxMesh_1fxep"]
size = Vector3(30, 1, 30)

[sub_resource type="Curve3D" id="Curve3D_wgho3"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -8.0523, 0.00623512, -7.831, 0, 0, 0, 0, 0, 0, 8.09761, 0.00619125, -7.77589, 0, 0, 0, 0, 0, 0, 8.09761, -0.00644875, 8.09843, 0, 0, 0, 0, 0, 0, -7.88694, -0.00645065, 8.09843, 0, 0, 0, 0, 0, 0, -8.0523, 0.00623512, -7.831),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_iegsp")
skull_scene = ExtResource("2_w00os")

[node name="Background" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Background"]
shape = SubResource("BoxShape3D_s7n6b")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Background/CollisionShape3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
mesh = SubResource("BoxMesh_1fxep")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 11.723, 2.63735)
light_color = Color(1, 0.454902, 0.192157, 1)
light_energy = 4.411
shadow_enabled = true
omni_range = 13.0

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 23, 0)

[node name="SpawnPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_wgho3")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(-0.0034124, 0, -0.999993, 0, 1, 0, 0.999993, 0, -0.0034124, -8.0523, 0.00623512, -7.831)
rotation_mode = 1

[node name="skull" parent="SpawnPath/SpawnLocation" instance=ExtResource("2_w00os")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.7
autostart = true

[node name="Lighter" parent="." instance=ExtResource("3_2cbla")]
transform = Transform3D(2, 0, 0, 0, -8.74228e-08, 2, 0, -2, -8.74228e-08, 0, 11.7, 5)

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
